<resources>
    <string name="app_name">home</string>
    <string name="login">Введите логин</string>
    <string name="password">Введите пароль</string>
    <string name="entre">Войти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login1">Login</string>
    <string name="password1">Password</string>
    <string name="exit1">назад</string>
</resources>